--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"better-queue": "^3.8.10",
 		"chalk": "^4.1.2",
 		"commander": "^8.3.0",
+		"debug": "^4.3.2",
 		"del": "^6.0.0",
 		"glob": "^7.2.0",
 		"glob-promise": "^4.2.2",
