--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"scripts": {
 		"filter": "node ./scripts/avatar-filter",
 		"generate": "node ./scripts/avatar-generator",
+		"postinstall": "make",
 		"lint": "solhint contracts/**/*.sol",
 		"format": "prettier --write contracts/**/*.sol"
 	},
@@ -40,6 +41,7 @@
 		"axios-retry": "^3.2.4",
 		"better-queue": "^3.8.10",
 		"chalk": "^4.1.2",
+		"child-process-promise": "^2.2.1",
 		"commander": "^8.3.0",
 		"debug": "^4.3.2",
 		"del": "^6.0.0",
@@ -49,7 +51,6 @@
 		"mkdirp": "^1.0.4",
 		"obs-websocket-js": "^4.0.3",
 		"ono": "^7.1.3",
-		"robotjs": "^0.6.0",
 		"sharp": "^0.29.2",
 		"user-agents": "^1.0.822"
 	}
