--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"better-queue": "^3.8.10",
 		"chalk": "^4.1.2",
 		"child-process-promise": "^2.2.1",
+		"chokidar": "^3.5.2",
 		"commander": "^8.3.0",
 		"debug": "^4.3.2",
 		"del": "^6.0.0",
