--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"license": "UNLICENSED",
 	"private": true,
 	"scripts": {
+		"paint": "node ./scripts/avatar-paint",
 		"filter": "node ./scripts/avatar-filter",
 		"generate": "node ./scripts/avatar-generator",
 		"postinstall": "make",
@@ -38,6 +39,7 @@
 		"axios-retry": "^3.2.4",
 		"better-queue": "^3.8.10",
 		"chalk": "^4.1.2",
+		"cheerio": "^1.0.0-rc.10",
 		"child-process-promise": "^2.2.1",
 		"chokidar": "^3.5.2",
 		"commander": "^8.3.0",
@@ -47,10 +49,18 @@
 		"glob": "^7.2.0",
 		"glob-promise": "^4.2.2",
 		"googleapis": "^89.0.0",
+		"interval-promise": "^1.4.0",
 		"is-numeric": "^0.0.9",
+		"lodash": "^4.17.21",
 		"mkdirp": "^1.0.4",
 		"obs-websocket-js": "^4.0.3",
 		"ono": "^7.1.3",
+		"puppeteer": "^11.0.0",
+		"puppeteer-extra": "^3.2.3",
+		"puppeteer-extra-plugin-adblocker": "^2.12.0",
+		"puppeteer-extra-plugin-anonymize-ua": "^2.3.3",
+		"puppeteer-extra-plugin-stealth": "^2.9.0",
+		"puppeteer-extra-plugin-user-data-dir": "^2.3.1",
 		"readline-promise": "^1.0.5",
 		"sharp": "^0.29.2",
 		"user-agents": "^1.0.822"
