--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"license": "UNLICENSED",
 	"private": true,
 	"scripts": {
+		"modulate": "node ./scripts/avatar-modulate",
 		"paint": "node ./scripts/avatar-paint",
 		"filter": "node ./scripts/avatar-filter",
 		"generate": "node ./scripts/avatar-generator",
