added mark as read process but current credentials has insufficient perms

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"glob": "^7.2.0",
 		"glob-promise": "^4.2.2",
 		"googleapis": "^89.0.0",
+		"image-size": "^1.0.0",
 		"interval-promise": "^1.4.0",
 		"is-numeric": "^0.0.9",
 		"lodash": "^4.17.21",
