--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"chokidar": "^3.5.2",
 		"commander": "^8.3.0",
 		"debug": "^4.3.2",
+		"deep-clone": "^3.0.3",
 		"del": "^6.0.0",
 		"envalid": "^7.2.2",
 		"glob": "^7.2.0",
