accessorise script is complete

--- a/package.json
+++ b/package.json
@@ -45,12 +45,12 @@
 		"cheerio": "^1.0.0-rc.10",
 		"child-process-promise": "^2.2.1",
 		"chokidar": "^3.5.2",
+		"color-difference": "^0.3.4",
 		"commander": "^8.3.0",
 		"debug": "^4.3.2",
 		"deep-clone": "^3.0.3",
 		"del": "^6.0.0",
 		"envalid": "^7.2.2",
-		"get-pixels": "^3.3.3",
 		"glob": "^7.2.0",
 		"glob-promise": "^4.2.2",
 		"googleapis": "^89.0.0",
