--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ WALLET_PRIVATE_KEY=
 GOOGLE_CLIENT_ID=""
 GOOGLE_SECRET_KEY=""
 GOOGLE_REDIRECT_URIS=""
+
+AWS_ACCESS_KEY_ID=""
+AWS_SECRET_ACCESS_KEY=""
