--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,8 @@ artifacts
 
 # misc
 .DS_Store
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*
+!.env.example
 tmp
 credentials.json
 
