--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,3 @@
-WALLET_PRIVATE_KEY=
-
 GOOGLE_CLIENT_ID=""
 GOOGLE_SECRET_KEY=""
 GOOGLE_REDIRECT_URIS=""
@@ -10,6 +8,8 @@ AWS_SECRET_ACCESS_KEY=""
 CLARIFAI_API_KEY=""
 OPENAI_API_KEY=""
 
-ALCHEMY_KEY=""
-MNEMONIC=""
-NETWORK=""
+ALCHEMY_API_KEY=""
+ETHERSCAN_API_KEY=""
+NETWORK="rinkeby"
+OWNER_PRIVATE_KEY=""
+OWNER_ADDRESS=""
