--- a/.eslintignore
+++ b/.eslintignore
@@ -1,8 +1,23 @@
-build
-dist
-vendor
-node_modules
-.yarn
-.next
-out
-logs
+# directories
+.yarn/
+**/.coverage_artifacts
+**/.coverage_cache
+**/.coverage_contracts
+**/artifacts
+**/build
+**/cache
+**/coverage
+**/dist
+**/node_modules
+**/types
+**/output
+**/data
+
+# files
+*.env
+*.log
+.pnp.*
+coverage.json
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
