--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
 		"randomcolor": "^0.6.2",
 		"readline-promise": "^1.0.5",
 		"sharp": "^0.29.2",
+		"superagent": "^7.0.2",
 		"user-agents": "^1.0.822"
 	}
 }
