--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"ethereum-waffle": "^3.4.0",
 		"ethers": "^5.4.4",
 		"hardhat": "^2.6.0",
+		"hardhat-abi-exporter": "^2.8.0",
 		"hardhat-contract-sizer": "^2.3.0",
 		"hardhat-deploy": "^0.9.14",
 		"prettier": "^2.3.2",
