created a new rename script for enhancements that uses Jimp.diff -- could be more reliable. Created gen-missing-ids scripts.

--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
 		"imghash": "^0.0.9",
 		"interval-promise": "^1.4.0",
 		"is-numeric": "^0.0.9",
+		"jimp": "^0.16.1",
 		"jsonfile": "^6.1.0",
 		"lodash": "^4.17.21",
 		"mkdirp": "^1.0.4",
