--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ AWS_SECRET_ACCESS_KEY=""
 
 CLARIFAI_API_KEY=""
 OPENAI_API_KEY=""
+GOOGLE_CLOUD_KEY_FILE=""
 
 ALCHEMY_API_KEY=""
 ETHERSCAN_API_KEY=""
