finalised the label settings files. Added label determination for apparel to the mf. Remove data folder -- ie. dont commit it. Move out opencv as its not data but rather a supporting set of files.

--- a/.gitignore
+++ b/.gitignore
@@ -22,11 +22,7 @@ dist
 build
 bin
 data/**/*
-!data/aws/.gitkeep
-!data/face/.gitkeep
-!data/ethnicity/.gitkeep
-!data/name/.gitkeep
-!data/nft/.gitkeep
+!data/.gitkeep
 deployments/localhost
 deployments/hardhat
 
