--- a/scripts/metadata-factory/apparel.json
+++ b/scripts/metadata-factory/apparel.json
@@ -1,46 +1,45 @@
 [
-	"Outerwear",
-	"T-shirt",
-	"Collar",
-	"Jewellery",
-	"Earrings",
-	"Street fashion",
-	"Dress shirt",
-	"Suit",
-	"Blazer",
-	"Necklace",
-	"Dress",
-	"Sari",
-	"Costume",
-	"Uniform",
-	"Fur",
-	"Tie",
-	"Military uniform",
-	"Shirt",
-	"Scarf",
-	"Cocktail dress",
-	"Stole",
-	"Windbreaker",
-	"Sports uniform",
-	"Woven fabric",
-	"Day dress",
-	"Jacket",
-	"Crochet",
-	"Fur clothing",
-	"Coat",
-	"Polar fleece",
-	"Hoodie",
-	"Polo shirt",
-	"Bow tie",
-	"Sports gear",
-	"Cosplay",
-	"Linens",
-	"Sportswear",
-	"Jersey",
-	"Workwear",
-	"Leather",
-	"Tuxedo",
-	"Bib",
-	"Collectable",
-	"Hair accessory"
+	{ "name": "Outerwear", "type": "label", "score": 0.5, "group": 0 },
+	{ "name": "T-shirt", "type": "label", "score": 0.5, "group": 1 },
+	{ "name": "Collar", "type": "label", "score": 0.5, "group": 2 },
+	{ "name": "Jewellery", "type": "label", "score": 0.5, "group": 0 },
+	{ "name": "Earrings", "type": "object", "score": 0.1, "group": 0 },
+	{ "name": "Earrings", "type": "label", "score": 0.5, "group": 0 },
+	{ "name": "Dress shirt", "type": "label", "score": 0.5, "group": 1 },
+	{ "name": "Suit", "type": "label", "score": 0.5, "group": 1 },
+	{ "name": "Blazer", "type": "label", "score": 0.5, "group": 1 },
+	{ "name": "Necklace", "type": "object", "score": 0.1, "group": 0 },
+	{ "name": "Dress", "type": "label", "score": 0.5, "group": 1 },
+	{ "name": "Sari", "type": "label", "score": 0.5, "group": 1 },
+	{ "name": "Costume", "type": "label", "score": 0.5, "group": 1 },
+	{ "name": "Uniform", "type": "label", "score": 0.5, "group": 1 },
+	{ "name": "Fur", "type": "label", "score": 0.5, "group": 2 },
+	{ "name": "Tie", "type": "label", "score": 0.5, "group": 3 },
+	{ "name": "Military uniform", "type": "label", "score": 0.5, "group": 1 },
+	{ "name": "Shirt", "type": "label", "score": 0.5, "group": 1 },
+	{ "name": "Scarf", "type": "label", "score": 0.5, "group": 2 },
+	{ "name": "Cocktail dress", "type": "label", "score": 0.5, "group": 1 },
+	{ "name": "Stole", "type": "label", "score": 0.5, "group": 2 },
+	{ "name": "Windbreaker", "type": "label", "score": 0.5, "group": 1 },
+	{ "name": "Sports uniform", "type": "label", "score": 0.5, "group": 1 },
+	{ "name": "Day dress", "type": "label", "score": 0.5, "group": 1 },
+	{ "name": "Jacket", "type": "label", "score": 0.5, "group": 1 },
+	{ "name": "Crochet", "type": "label", "score": 0.5, "group": 1 },
+	{ "name": "Coat", "type": "label", "score": 0.5, "group": 1 },
+	{ "name": "Polar fleece", "type": "label", "score": 0.5, "group": 1 },
+	{ "name": "Hoodie", "type": "label", "score": 0.5, "group": 1 },
+	{ "name": "Polo shirt", "type": "label", "score": 0.5, "group": 1 },
+	{ "name": "Bow tie", "type": "label", "score": 0.5, "group": 3 },
+	{ "name": "Cosplay", "type": "label", "score": 0.5, "group": 0 },
+	{ "name": "Sports gear", "type": "label", "score": 0.5, "group": 1 },
+	{ "name": "Sportswear", "type": "label", "score": 0.5, "group": 0 },
+	{ "name": "Jersey", "type": "label", "score": 0.5, "group": 1 },
+	{ "name": "Formal wear", "type": "label", "score": 0.5, "group": 0 },
+	{ "name": "Workwear", "type": "label", "score": 0.5, "group": 0 },
+	{ "name": "Leather", "type": "label", "score": 0.5, "group": 1 },
+	{ "name": "Tuxedo", "type": "label", "score": 0.5, "group": 1 },
+	{ "name": "Bib", "type": "label", "score": 0.5, "group": 2 },
+	{ "name": "Collectable", "type": "label", "score": 0.5, "group": 0 },
+	{ "name": "Hair accessory", "type": "label", "score": 0.5, "group": 0 },
+	{ "name": "Academic dress", "type": "label", "score": 0.5, "group": 1 }
 ]
