modularised the applyLabel method. Need to fine tune to scores required to add cosmetics and some apparel.

--- a/scripts/metadata-factory/apparel.json
+++ b/scripts/metadata-factory/apparel.json
@@ -12,7 +12,8 @@
 	{ "name": "Sari", "score": 0.5, "group": 1 },
 	{ "name": "Costume", "score": 0.5, "group": 1 },
 	{ "name": "Uniform", "score": 0.5, "group": 1 },
-	{ "name": "Fur", "score": 0.5, "group": 2 },
+	{ "name": "Fur", "score": 0.7, "group": 0 },
+	{ "name": "Wool", "score": 0.7, "group": 0 },
 	{ "name": "Tie", "score": 0.5, "group": 3 },
 	{ "name": "Military uniform", "score": 0.5, "group": 1 },
 	{ "name": "Shirt", "score": 0.5, "group": 1 },
@@ -35,7 +36,7 @@
 	{ "name": "Jersey", "score": 0.5, "group": 1 },
 	{ "name": "Formal wear", "score": 0.5, "group": 0 },
 	{ "name": "Workwear", "score": 0.5, "group": 0 },
-	{ "name": "Leather", "score": 0.5, "group": 1 },
+	{ "name": "Leather", "score": 0.7, "group": 0 },
 	{ "name": "Tuxedo", "score": 0.5, "group": 1 },
 	{ "name": "Bib", "score": 0.5, "group": 2 },
 	{ "name": "Collectable", "score": 0.5, "group": 0 },
