--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"better-queue": "^3.8.10",
 		"canvas": "^2.8.0",
 		"chalk": "^4.1.2",
+		"chance": "^1.1.8",
 		"cheerio": "^1.0.0-rc.10",
 		"child-process-promise": "^2.2.1",
 		"chokidar": "^3.5.2",
