--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
 		"puppeteer-extra-plugin-user-data-dir": "^2.3.1",
 		"randomcolor": "^0.6.2",
 		"readline-promise": "^1.0.5",
+		"segfault-handler": "^1.3.0",
 		"sharp": "^0.29.2",
 		"superagent": "^7.0.2",
 		"user-agents": "^1.0.822"
