replace canvas pixel fetch with jimp (bitmap) pixel fetch

--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
 		"axios": "^0.24.0",
 		"axios-retry": "^3.2.4",
 		"better-queue": "^3.8.10",
-		"canvas": "^2.8.0",
 		"chalk": "^4.1.2",
 		"chance": "^1.1.8",
 		"cheerio": "^1.0.0-rc.10",
@@ -68,6 +67,7 @@
 		"glob": "^7.2.0",
 		"glob-promise": "^4.2.2",
 		"googleapis": "^89.0.0",
+		"hex2dec": "^1.1.2",
 		"humanparser": "^2.6.0",
 		"image-size": "^1.0.0",
 		"imghash": "^0.0.9",
